# RusticBalancer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
RusticBalancer/: Cargo.toml  Makefile.toml  conf.txt  log.txt
RusticBalancer/src/: main.rs  server.rs  serverdyna.rs  serverping.rs  serverping2.rs  test.rs
exercises/: quiz1.rs
exercises/00_intro/: intro1.rs  intro2.rs
exercises/01_variables/: variables3.rs  variables5.rs  variables6.rs
exercises/02_functions/: functions1.rs  functions5.rs
exercises/03_if/: if1.rs  if2.rs  if3.rs
exercises/04_primitive_types/: primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types6.rs
exercises/05_vecs/: vecs1.rs  vecs2.rs
exercises/06_move_semantics/: move_semantics1.rs  move_semantics2.rs  move_semantics3.rs  move_semantics4.rs  move_semantics5.rs  move_semantics6.rs
tests/: testload.rs
