[package]
name = "RusticBalancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"

# Dépendances autres

[[bin]]
name = "load_balancer"
path = "src/main.rs"

[[bin]]
name = "echo_server"
path = "src/serverping.rs"

[[bin]]
name = "echo_server2"
path = "src/serverping2.rs"